--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" path="hyewon-p/Week1"/>
+	<classpathentry kind="src" path="jins"/>
 	<classpathentry kind="src" path="hyewon-p/week2"/>
 	<classpathentry kind="src" path="InhyukTak/week2"/>
 	<classpathentry kind="src" path="jsshim2001/week1"/>
